Bug 472948 - drkonqi does not install debug symbols on neon unstable
Summary: drkonqi does not install debug symbols on neon unstable
Status: RESOLVED FIXED
Alias: None
Product: neon
Classification: KDE Neon
Component: Packages Unstable Edition (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Neon Bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-08-03 11:02 UTC by Patrick Silva
Modified: 2023-08-11 17:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (627.56 KB, video/webm)
2023-08-03 11:02 UTC, Patrick Silva
Details
screenshot2 (212.84 KB, image/png)
2023-08-11 12:34 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-08-03 11:02:31 UTC
Created attachment 160701 [details]
screen recording

SUMMARY
I get an error message after clicking on the button used to install the debug symbols.
Please watch the attached screen recording.

EXPECTED RESULT
drkonqi installs the debug symbols

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Patrick Silva 2023-08-11 12:34:32 UTC
Created attachment 160906 [details]
screenshot2

Currently drkonqi fails to obtain authentication.
Comment 2 Harald Sitter 2023-08-11 17:20:46 UTC
Git commit b1affb199c7a3f96241f01c78464631c91a2b50e by Harald Sitter.
Committed on 11/08/2023 at 19:20.
Pushed by sitter into branch 'master'.

make packagekit interactive

this should fix a slew of issues where no auth dialog appears

M  +2    -0    src/main.cpp

https://invent.kde.org/system/drkonqi-pk-debug-installer/-/commit/b1affb199c7a3f96241f01c78464631c91a2b50e