make packagekit interactive

this should fix a slew of issues where no auth dialog appears

BUG: 472948